# grgl

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  BUILDING.md  BuildDocs.md  CMakeLists.txt  DEVELOPING.md  Dockerfile  Dockerfile.CUDA  Dockerfile.package  Dockerfile.pkg1  Dockerfile.pkg2  Doxyfile.in  GettingStarted.md  MANIFEST.in  PaperExperiments.md  README.md  RELEASING.md  format-check.sh  format.sh  package.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cmake-multi-platform.yml
bioc_recip_tmp/: build-fail-blacklist
bioc_recip_tmp/recipes/pygrgl/: meta.yaml
doc/: cli_recipes.rst  concepts.rst  conf.py  construct.rst  cpp_api.rst  dot_products.rst  examples_and_applications.rst  index.rst  installation.rst  matmul.rst  python_api.rst  requirements.txt  traversal.rst  ts_convert.rst
doc/tutorials/: GWAS.rst  GWASCovariates.rst  IGDToGRG.rst  LinearOperators.rst  PCA.rst  README  SimulatingPhenotypes.rst  VCFToGRG.rst  WorkingWithRealData.rst  WorkingWithSimData.rst  build_rst.py
doc/tutorials/notebooks/: .gitignore  GWAS.ipynb  GWASCovariates.ipynb  IGDToGRG.ipynb  LinearOperators.ipynb  PCA.ipynb  SimulatingPhenotypes.ipynb  VCFToGRG.ipynb  WorkingWithRealData.ipynb  WorkingWithSimData.ipynb
examples/: allele_counts.cpp
extra/: gtime.cpp  vcftime.cpp
include/grgl/: common.h  csr_storage.h  cuda_kernels.cuh  cuda_matmul.h  file_vector.h  gpu_grg.h  grg.h  grgnode.h  internal_mult.h  map_mutations.h  mut_iterator.h  mutation.h  node_data.h  polarization.h  serialize.h  transform.h  ts2grg.h  version.h  visitor.h  windowing.h
include/grgl/cuda/: cuda_kernels.cuh  gpu_grg.h
jupyter/: 01.Intro.ipynb  02.Traversals.ipynb
pygrgl/: __init__.py  cli.py  display.py  grg.py
pygrgl/clicmd/: common.py  construct.py  convert.py  merge.py  polarize.py  process.py  split.py
scripts/: add_indiv_ids.py  convertlz4.sh
scripts/experimental/: find_treesize.py
src/: build_shape.cpp  build_shape.h  calculations.cpp  calculations.h  common_visitors.h  fast_build.cpp  fast_build.h  gconverter.cpp  gindexer.cpp  grg.cpp  grg_helpers.h  grg_merge.cpp  grgl.cpp  grgp.cpp  gthash_build.cpp  gthash_build.h  gthash_index.cpp  gthash_index.h  hap_helpers.h  hap_index.cpp  hap_index.h  hap_segment.h  lean_bk_tree.h  map_mutations.cpp  merge.cpp  mut_iterator.cpp  mutation.cpp  node_unique_hash.h  polarization.cpp  pooled_jobs.h  serialize.cpp  transform.cpp  ts2grg.cpp  tskit_util.h  util.h  varint.h  windowing.cpp
src/cuda/: cuda_matmul.cu  gpu_grg.cu
src/python/: .clang-tidy  _grgl.cpp
src/similarity/: bf_hash.h  mmh3.h
test/: requirements.txt
test/endtoend/: run_tests.py  test_basic.py  test_matmul.py  test_merge.py  test_missing.py  test_modify.py  test_polarize.py  test_ts2grg.py  testing_utils.py
test/endtoend/expect/: test-200-samples.freq.txt  test-200-samples.zygosity.txt
test/endtoend/input/: merge_left.vcf  merge_right.vcf  multi.vcf  test-200-samples.miss.igd
test/inputs/: msprime.example.vcf
test/unit/: common_grgs.h  test_batch_membership.cpp  test_bloom_filter.cpp  test_common.cpp  test_construct.cpp  test_csr_storage.cpp  test_cuda_matmul.cpp  test_cuda_mult.cpp  test_cuda_support.cpp  test_grg.cpp  test_map_muts.cpp  test_mult.cpp  test_mut_iterator.cpp  test_mutation.cpp  test_serialize.cpp  test_util.cpp  test_visitor.cpp  testing_utilities.h
